--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -52,3 +52,27 @@
     height: 1.5rem;
     cursor: pointer;
 }
+
+@media screen and (max-width: 600px) {
+    .right{
+        position: absolute;
+        right: 2rem;
+        z-index: 9999;
+        background: white;
+        color: var(--black);
+        border-radius: 5px;
+        flex-direction: column;
+        padding: 1rem;
+    }
+    .menu{
+        flex-direction: column;
+        margin-left: -2rem;
+        display: none;
+    }
+    .bars{
+        display: block;
+    }
+    .search{
+        display: none;
+    }
+}
