--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -68,3 +68,15 @@
     height: 100%;
     bottom: -20%;
 }
+
+@media screen and (max-width: 856px){
+    .s-container .swiper{
+        width: 90%;
+        height: 10rem;
+    }
+    .s-container .swiper-button-prev,
+    .s-container .swiper-button-next{
+        display: none;
+    }
+    
+}
