--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -114,3 +114,47 @@
     font-size: 2.5rem;
     text-align: right;
 }
+
+@media screen and (max-width: 856px){
+    .text1, .text2>span:nth-last-of-type(2){
+        font-size: .9rem;
+        text-align: justify;
+    }
+    .text2 > span:nth-of-type(1),
+    .traffic > span:nth-child(1),
+    .customers > span:nth-child(1) {
+        font-size: 1.5rem;
+        text-align: left;
+    }
+    .blueCircle{
+        position: absolute;
+        width: 70%;
+        height: 100%;
+    }
+    .wrapper>img{
+        width: 70%;
+        height: 100%;
+    }
+    .container{
+        grid-template-areas: 
+          'left center center'
+          'right right right';
+    }
+    .container>:first-child{
+        grid-area: left;
+        grid-template-rows: none;
+        gap: 8rem;
+    }
+    .container>:nth-child(2){
+        grid-area: center;
+    }
+    .container>:nth-child(3){
+        grid-area: right;
+        display: flex;
+        justify-content: space-around;
+        margin: 2rem 0rem;
+    }
+    .cart2{
+        
+    }
+}
