--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -53,7 +53,20 @@
     cursor: pointer;
 }
 
-@media screen and (max-width: 600px) {
+.bars{
+    display: none;
+}
+
+@media screen and (max-width: 856px){
+    .search{
+        display: none;
+    }
+    .right{
+        gap: 1rem;
+    }
+}
+
+@media screen and (max-width: 640px) {
     .right{
         position: absolute;
         right: 2rem;
